--- a/styles.css
+++ b/styles.css
@@ -8,62 +8,94 @@
 body{
     font-family: sans-serif;
     margin: 0;
-    background-color:rgb(245, 245, 245);
-}
-
-header{
-    background-color:rgb(245, 245, 245) ;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 85px;
-    padding: 5px 10%;
-}
-
-header .logo{
-    cursor: pointer;
-}
-
-header h2{
-    font-style: italic;
-    font-size: 2.1em;
-    margin-right: 400px;
-}
-
-header .logo img{
-    height: 50px;
-    width:auto;
-
+    background-color:#f6f9fc
 }
 
 
-header .nav-list{
-    list-style: none;
+.nav-link{
+    color:rgb(74, 112, 182);
 }
-
-header .nav-list li{
-    display: inline-block;
-    padding: 0 20px;
-
-}
-
-header .nav-list li:hover{
+.nav-link:hover{
+    color:#0a2540;
     transform: scale(1.1);
 }
+.navbar-brand  {
+    color:rgb(74, 112, 182);;;
+}
+.navbar-brand:hover{
+    color:#0a2540;
+}
 
-header .nav-list a{
-    font-size: 700;
-    color: black;
-    text-decoration: none;
+.footer{
+    background-color: rgb(74, 112, 182)
+}
+
+.footer li i{
+    color:#EEF0F2;
+}
+
+.footer p{
+    color: #EEF0F2
+}
+.footer h4{
+    color:#dbdbdb
+}
+.footer ul li{
+    color: #EEF0F2
+}
+
+.habitaciones h3{
+    color: rgb(74, 112, 182);
+}
+
+.iconos h2{
+    color: rgb(74, 112, 182) ;
+}
+
+.nuestros-platos h3{
+    color: rgb(74, 112, 182);
+}
+
+.bg-btn{
+    font-size: 1em;
     font-weight: bold;
+    border-radius: 10px;
+    border: 0.5px solid rgba(0, 0, 0, 0.5,);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    background-color:rgb(24, 87, 139);
+    color: white;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
 }
 
-header .nav-list li a:hover{
-    color: rgb(74, 112, 182)
+.btn:hover{
+    background-color:white ;
+    color: rgb(24, 87, 139);
 }
 
 
 
+.ciudad h4{
+    color: rgb(74, 112, 182);
+}
+
+
+.servicios h4{
+    color: rgb(74, 112, 182);
+}
+
+.opiniones h3{
+    color: rgb(74, 112, 182);
+}
+
+.contacto h2{
+    color: rgb(74, 112, 182);
+}
+
+.contacto ul li a{
+    text-decoration: none;
+    color: black;
+}
 
 #banner{
     display: flex;
@@ -108,6 +140,9 @@ header .nav-list li a:hover{
     background-size: cover;
     background-position: center center;
     }
+#banner-2 h2{
+    font-size: 3em
+}
 
 #banner-3{
     display: flex;
@@ -128,6 +163,10 @@ header .nav-list li a:hover{
     background-position: center center;
     }
 
+#banner-3 h2{
+    font-size: 3em
+}
+
 #banner-4{
     display: flex;
     align-items: center;
@@ -147,6 +186,10 @@ header .nav-list li a:hover{
     background-position: center center;
     }
 
+#banner-4 h2{
+    font-size: 3em
+}
+
 #banner-5{
     display: flex;
     align-items: center;
@@ -165,6 +208,10 @@ header .nav-list li a:hover{
     background-size: cover;
     background-position: center center;
 
+}
+
+#banner-5 h2{
+    font-size: 3em
 }
 
 /*Contacto*/
@@ -262,7 +309,7 @@ button a{
 
 button:hover {
     background-color:rgb(74, 112, 182);
-    transform: scale(0.4);
+    transform: scale(1.1);
 }
 
 label {
@@ -281,56 +328,8 @@ input{
     color:rgb(74, 112, 182);
 }
 
-#bienvenidos .container{
-    display: flex;
-    text-align: center;
-    padding: 200px 12px;
-    justify-content: center;
-}
-
-
-#bienvenidos .texto{
-    width: 50%;
-    max-width: 600px;
-    text-align: initial;
-    display: flex;
-    flex-direction: column;
-    justify-content: center ;
-}
-
-#bienvenidos h2{
-    font-size: 2.5em;
-    margin-top: 50px;
-}
-
-#bienvenidos h3{
-    font-size: 3em;
-    margin-top: 10px;
-}
-
-#bienvenidos p{
-    font-size: 1.7em;
-    margin-top: 20px;
-}
-
-#bienvenidos .img-container{
-    background-image: linear-gradient(
-        0deg, 
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
-    )
-    ,url("/images/bien.jpg");
-    background-size:cover;
-    background-position: center center;
-    height: 620px;
-    width: 50%;
-    margin-right: 100px ;
-
-}
-
 #introducciones{
     background-color: rgb(30, 30, 30);
-    color: white;
     text-align: center;
 }
 
@@ -340,11 +339,17 @@ input{
 
 
 #introducciones h2{
+    color: rgb(74, 112, 182);
     margin: 20px;
     font-size: 3em;
 }
 
+#introducciones h3{
+    color:rgb(187, 198, 219);
+}
+
 #introducciones p{
+    color: #f6f9fc;
     display: none;
 }
 
@@ -397,7 +402,7 @@ background-image: linear-gradient(
 
 #platos{
     background-color: rgb(30, 30, 30);
-    color: white;
+    color: #f6f9fc;
     text-align: center;
 }
 
@@ -407,8 +412,9 @@ background-image: linear-gradient(
 
 
 #platos h2{
-    margin: 20px;
+    margin-bottom: 70px;
     font-size: 3em;
+    color: rgb(74, 112, 182) ;
 }
 
 
@@ -485,59 +491,7 @@ background-image: linear-gradient(
     margin:12px;
     border-radius: 20px;
 }
-    /*información*/
 
-#opiniones{
-    background-color: rgb(30, 30, 30);
-    color: white;
-    text-align: center;
-}
-    
-#opiniones .container{
-    padding: 100px 5px;
-}
-.op-img:first-child{
-    background-image: linear-gradient(
-        0deg, 
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
-    )
-    ,url("images/op-google.jpg");
-    background-position: center center;
-    background-size: cover;
-    padding:50px;
-    margin:12px;
-    border-radius: 20px;
-}
-    
-.op-img:nth-child(2){
-background-image: linear-gradient(
-    0deg, 
-    rgba(0,0,0,0.5),
-    rgba(0,0,0,0.5)
-)
-    ,url("images/op-google2.jpg");
-    background-position: center center;
-    background-size: cover;
-    padding:50px;
-    margin:12px;
-    border-radius: 20px;
-}
-    
-.op-img:nth-child(3){
-    background-image: linear-gradient(
-        0deg, 
-        rgba(0, 0, 0, 0),
-        rgba(0,0,0, 0.5)
-    )
-    ,url("images/op-booking.jpg");
-    background-position: center center;
-    background-size: cover;
-    padding:50px;
-    margin:12px;
-    border-radius: 20px;
-    
-}
 /* Contenedor */
 
 .container{
@@ -545,99 +499,20 @@ background-image: linear-gradient(
     margin: auto;
 }
 
+/*
 
+<form action="#" autocomplete="off">
+<input type="text" name="nombre"
+placeholder="Ingresa tu nombre"
+class="campo">
+<input type="email" name="email"
+placeholder=" Ingresa tu email" class="campo">
+<textarea name="mensaje" placeholder="Ingresa tu mensaje">
+</textarea>
+<input type="submit" name="enviar"
+value="Enviar" class="btn-enviar">
 
-.footer {
-    background-color: steelblue;
-    padding: 40px 0;
-    min-height: 100px;
-}
-
-.footer-row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-between;
-    align-items: baseline;
-}
-
-.footer-links {
-    width: 20%;
-    padding: 0 15px;
-}
-
-.footer-links p{
-    font-size: 18px;
-    text-decoration: none;
-    color: #bbbbbb;
-}
-
-.footer-links h4 {
-    font-size: 20px;
-    color: azure;
-    margin-bottom: 25px;
-    font-weight: 50;
-    border-bottom: 2px solid black;
-    padding-bottom: 10px;
-    display: inline-block;
-}
-
-.footer-links div img {
-    display: inline-block;
-    align-items: center;
-    height: 28px;
-}
-
-.footer-links ul li {
-    font-size: 18px;
-    text-decoration: none;
-    color:#bbbbbb;
-    display:block;
-    margin-bottom: 7px;
-}
-
-.social-links a{
-    display: inline-block;
-    min-height: 40px;
-    margin: 0 10px 10px 0;
-    text-align: center;
-    line-height: 30px;
-    border-radius: 50%;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</form>
 
 
 /*prueba*/
@@ -645,6 +520,7 @@ background-image: linear-gradient(
 
 
 @media (min-width: 720px){
+
     #introducciones .intro-3{
         display: flex;
         justify-content: center;
@@ -685,6 +561,5 @@ background-image: linear-gradient(
 
     }
 
-
-
 }
+
